# annorepo-tools

./: README.md  pyproject.toml  requirements.txt
annorepo_tools/: add_canvas_target_to_page_web_annotations.py  add_url_to_picture_web_annotations.py  annorepo_tools.py  consolidate_web_annotations.py  scans_to_web_annotations.py  upload_web_annotations.py  utils.py
tests/: util_test.py
